# ED_I-work_01-TAD-Lista

./: .gitignore  image.c  image.h  main.c  meson.build  teste
imagens/: lenaTeste.txt  lena_clahe.txt
output/imagens/: lena_blur.txt
utils/: image_utils.py
